////

=== Unreleased

https://github.com/elastic/apm-agent-python/compare/v5.3.1\...master[Check the diff]

// Unreleased changes go here
// When the next release happens, nest these changes under the "Python Agent version 5.x" heading

[float]
===== Deprecations

This will be the last minor release to support the following versions:

 * Python 3.4
 * Django 1.8, 1.9 and 1.10
 * Flask < 1.0

[float]
===== New Features

 * Added support for aiohttp client and server {pull}659[#659]
 * Added support for W3C `traceparent` and `tracestate` headers {pull}660[#660]
 * Added Django 3.0 and Flask 1.1 to the support matrix {pull}667[#667]
 * Added support for aiopg {pull}668[#668] 
 * Use Span ID as parent ID in errors if an error happens inside a span {pull}669[#669]


[[release-notes-5.x]]
=== Python Agent version 5.x

[[release-notes-5.3.3]]
==== v5.3.3

https://github.com/elastic/apm-agent-python/compare/v5.3.2\...v5.3.3[Check the diff]

[float]
===== Bug fixes

 * Fixed an issue with OpenTracing bridge and dropped spans {pull}687[#687]
 * Fixed bug that would make the agent ignore the `hostname` configuration setting {pull}689[#689]

[[release-notes-5.3.2]]
==== v5.3.2

https://github.com/elastic/apm-agent-python/compare/v5.3.1\...v5.3.2[Check the diff]

[float]
===== Bug fixes

 * Added support for IPv6 address format when parsing urls {pull}649[#649]

[[release-notes-5.3.1]]
==== v5.3.1

https://github.com/elastic/apm-agent-python/compare/v5.3.0\...v5.3.1[Check the diff]

[float]
===== New Features

* Added support for shortening dicts in local variables {pull}638[#638]

[[release-notes-5.3.0]]
==== v5.3.0

https://github.com/elastic/apm-agent-python/compare/v5.2.3\...v5.3.0[Check the diff]

[float]
===== New Features

* Added instrumentation for mysql-connector and pymysql {pull}603[#603]
* Implemented stack_trace_limit configuration option {pull}623[#623]
* Autoinsert tracing middleware in django settings {pull}625[#625]

[float]
===== Bug fixes
