@@ -34,13 +34,18 @@ This will be the last minor release to support the following versions:
  * Django 1.8, 1.9 and 1.10
  * Flask < 1.0
 
+ In addition, as of this release we no longer support positional args for
+ elasticsearch-py. This is in keeping with the
+ https://elasticsearch-py.readthedocs.io/en/master/api.html#api-documentation[upstream policy]
+ of positional args being unsupported. {pull}697[#697]
+
 [float]
 ===== New Features
 
  * Added support for aiohttp client and server {pull}659[#659]
  * Added support for W3C `traceparent` and `tracestate` headers {pull}660[#660]
  * Added Django 3.0 and Flask 1.1 to the support matrix {pull}667[#667]
- * Added support for aiopg {pull}668[#668] 
+ * Added support for aiopg {pull}668[#668]
  * Use Span ID as parent ID in errors if an error happens inside a span {pull}669[#669]
 
 
